fix: update overflow styling on checkbox

--- a/packages/design/tailwind/css/components/input-checkbox.css
+++ b/packages/design/tailwind/css/components/input-checkbox.css
@@ -30,6 +30,7 @@
 }
 .gi-input-checkbox-container label {
   @apply gi-w-fit;
+  overflow-wrap: anywhere;
 }
 .gi-input-checkbox-hint-container {
   @apply gi-flex gi-gap-4;
